tests/compile_errors/002-break.buzz
| break is not allowed here.
test "break outside of loop" {
    while (true) {
        break;
    }

    if (true) {
        break;
    }

    break;
}